Update project descriptions and add new certificates

--- a/index.html
+++ b/index.html
@@ -270,13 +270,13 @@
           <h2 data-i18n="projects_title">Projeler</h2>
           
           <h3 data-i18n="p1_title">Kablosuz Enerji Aktarımlı Elektrikli Araç Şarj Yolu (Bitirme Projesi)</h3>
-          <p class="muted" data-i18n="p1_desc">Bu projede, güneş enerjisi ile beslenen, kablosuz güç transferi kullanarak hareketli bir aracı şarj edebilen modüler bir yol sistemi tasarlanmış ve prototipi oluşturulmuştur.<br><br>Sistem; 20W 12V güneş paneli, 12V akü, 12V DC → 220V AC kare dalga inverter ve Arduino Uno kontrol ünitesinden oluşmaktadır. Yol boyunca yerleştirilmiş 16 adet U tipi ferrit çekirdekli verici bobin, IR sensörler yardımıyla aracın konumuna göre sadece aracın altında bulunan bobin aktif olacak şekilde kontrol edilmektedir. Bu sayede enerji israfı önlenmiş ve sistem verimliliği artırılmıştır.<br><br>Araç üzerinde ise iki adet alıcı bobin, doğrultma ve regülasyon devresi ile 8V 1.8Ah bataryanın şarj edilmesi sağlanmıştır. Araç, bu batarya ile çalışan Arduino, motor sürücü ve 4 adet 6V DC motor içermektedir.<br><br>Projede ayrıca 100 kHz çalışma frekansına uygun, UU6015 ferrit çekirdek üzerinde 20 tur verici bobin tasarımı yapılmış ve güç aktarımı deneysel olarak test edilmiştir.<br><br><strong>Kazanımlar:</strong><br>• Güç elektroniği<br>• Yüksek frekanslı inverter tasarımı<br>• Kablosuz enerji transferi<br>• Arduino ile gerçek zamanlı kontrol<br>• Sensör tabanlı otomasyon",</p>
+          <p class="muted" data-i18n="p1_desc">Bu projede, güneş enerjisi ile beslenen, kablosuz güç transferi kullanarak hareketli bir aracı şarj edebilen modüler bir yol sistemi tasarlanmış ve prototipi oluşturulmuştur.<br><br>Sistem; 20W 12V güneş paneli, 12V akü, 12V DC → 220V AC kare dalga inverter ve Arduino Uno kontrol ünitesinden oluşmaktadır. Yol boyunca yerleştirilmiş 16 adet U tipi ferrit çekirdekli verici bobin, IR sensörler yardımıyla aracın konumuna göre sadece aracın altında bulunan bobin aktif olacak şekilde kontrol edilmektedir. Bu sayede enerji israfı önlenmiş ve sistem verimliliği artırılmıştır.<br><br>Araç üzerinde ise iki adet alıcı bobin, doğrultma ve regülasyon devresi ile 8V 1.8Ah bataryanın şarj edilmesi sağlanmıştır. Araç, bu batarya ile çalışan Arduino, motor sürücü ve 4 adet 6V DC motor içermektedir.<br><br>Projede ayrıca 100 kHz çalışma frekansına uygun, UU6015 ferrit çekirdek üzerinde 20 tur verici bobin tasarımı yapılmış ve güç aktarımı deneysel olarak test edilmiştir.<br><br><strong>Kazanımlar:</strong><br>• Güç elektroniği<br>• Yüksek frekanslı inverter tasarımı<br>• Kablosuz enerji transferi<br>• Arduino ile gerçek zamanlı kontrol<br>• Sensör tabanlı otomasyon</p>
 
           <h3 data-i18n="p2_title">Güneş Enerjili Tarımsal Sulama Sistemi Tasarımı</h3>
-          <p class="muted" data-i18n="p2_desc">Bu projede, 4 kW gücünde (İmpo SK 408/23) dalgıç pompayı besleyebilecek güneş enerjili bir sulama sisteminin boyutlandırması ve sistem tasarımı yapılmıştır. Hedef; 1 dönümlük tarım arazisi için günlük 5000–8000 litre su sağlayabilecek, günde 5–8 saat çalışabilen, şebekeden bağımsız (off-grid) bir sistem oluşturmaktır.<br><br><strong>Sistem Kapsamı:</strong><br>• 6 kW güneş paneli gücü<br>• Akü destekli enerji depolama yapısı<br>• Uygun inverter seçimi<br>• Günlük enerji tüketimi ve üretim hesabı<br>• Pompa kalkış akımı ve sürekli çalışma gücü analizleri<br><br><strong>Kazanımlar:</strong><br>• Yenilenebilir enerji sistemleri boyutlandırma<br>• Yük analizi<br>• İnverter ve akü kapasitesi hesaplama<br>• Tarımsal enerji sistemleri planlama",</p>
+          <p class="muted" data-i18n="p2_desc">Bu projede, 4 kW gücünde (İmpo SK 408/23) dalgıç pompayı besleyebilecek güneş enerjili bir sulama sisteminin boyutlandırması ve sistem tasarımı yapılmıştır. Hedef; 1 dönümlük tarım arazisi için günlük 5000–8000 litre su sağlayabilecek, günde 5–8 saat çalışabilen, şebekeden bağımsız (off-grid) bir sistem oluşturmaktır.<br><br><strong>Sistem Kapsamı:</strong><br>• 6 kW güneş paneli gücü<br>• Akü destekli enerji depolama yapısı<br>• Uygun inverter seçimi<br>• Günlük enerji tüketimi ve üretim hesabı<br>• Pompa kalkış akımı ve sürekli çalışma gücü analizleri<br><br><strong>Kazanımlar:</strong><br>• Yenilenebilir enerji sistemleri boyutlandırma<br>• Yük analizi<br>• İnverter ve akü kapasitesi hesaplama<br>• Tarımsal enerji sistemleri planlama</p>
 
           <h3 data-i18n="p3_title">Optimizasyon Tabanlı PID Kontrolcü Tasarımı (Akademik Çalışma)</h3>
-          <p class="muted" data-i18n="p3_desc">Bu çalışmada, “Design of PID Controllers with Computational Optimization Approach” başlığı altında, klasik PID ayarlama yöntemleri yerine optimizasyon algoritmaları kullanılarak PID parametrelerinin belirlenmesi konusu incelenmiştir. Kontrol teorisi dersi kapsamında yapılan bu projede; PID kontrolcülerin çalışma prensipleri, manuel ayarlama yöntemlerinin dezavantajları ve optimizasyon tabanlı yaklaşımın performans iyileştirmesi teorik ve uygulamalı olarak ele alınmıştır.<br><br>Amaç; sistemin aşım (overshoot), yerleşme süresi (settling time) ve kararlı hal hatası (steady-state error) gibi performans kriterlerini iyileştiren PID parametrelerini hesaplamalı yöntemlerle elde etmektir.<br><br><strong>Kazanımlar:</strong><br>• Kontrol sistemleri<br>• PID optimizasyonu<br>• Mühendislikte sayısal yöntemlerin kullanımı<br>• Sistem performans analizi",</p>
+          <p class="muted" data-i18n="p3_desc">Bu çalışmada, “Design of PID Controllers with Computational Optimization Approach” başlığı altında, klasik PID ayarlama yöntemleri yerine optimizasyon algoritmaları kullanılarak PID parametrelerinin belirlenmesi konusu incelenmiştir. Kontrol teorisi dersi kapsamında yapılan bu projede; PID kontrolcülerin çalışma prensipleri, manuel ayarlama yöntemlerinin dezavantajları ve optimizasyon tabanlı yaklaşımın performans iyileştirmesi teorik ve uygulamalı olarak ele alınmıştır.<br><br>Amaç; sistemin aşım (overshoot), yerleşme süresi (settling time) ve kararlı hal hatası (steady-state error) gibi performans kriterlerini iyileştiren PID parametrelerini hesaplamalı yöntemlerle elde etmektir.<br><br><strong>Kazanımlar:</strong><br>• Kontrol sistemleri<br>• PID optimizasyonu<br>• Mühendislikte sayısal yöntemlerin kullanımı<br>• Sistem performans analizi</p>
           
         </div>
       </section>
@@ -296,9 +296,6 @@
               <img src="assets/certificates/EmbeddedSystemUsingC.png" alt="Embedded Systems using C" loading="lazy">
             </a>
 
-            <a class="cert-item" href="assets/certificates/Elektrik Proje Temel Eğitimi_Udemy.png" target="_blank">
-              <img src="assets/certificates/Elektrik Proje Temel Eğitimi_Udemy.png" alt="Udemy Elektrik Proje" loading="lazy">
-            </a>
             <a class="cert-item" href="assets/certificates/Google Prompting Essentials_Coursera.png" target="_blank">
               <img src="assets/certificates/Google Prompting Essentials_Coursera.png" alt="Google Prompting" loading="lazy">
             </a>
@@ -350,9 +347,16 @@
             <a class="cert-item" href="assets/certificates/Yz.png" target="_blank">
               <img src="assets/certificates/Yz.png" alt="YZ Üretkenlik İpuçları" loading="lazy">
             </a>
-
             <a class="cert-item" href="assets/certificates/Pilotluk_sertifikası.png" target="_blank">
               <img src="assets/certificates/Pilotluk_sertifikası.png" alt="İHA-1 Pilot Lisansı" loading="lazy">
+            </a>
+
+            <a class="cert-item" href="assets/certificates/certificate-1771433506720.png" target="_blank">
+              <img src="assets/certificates/certificate-1771433506720.png" alt="Elektrik proje okuması" loading="lazy">
+            </a>
+
+            <a class="cert-item" href="assets/certificates/Elektrik Proje Temel Eğitimi_Udemy.png" target="_blank">
+              <img src="assets/certificates/Elektrik Proje Temel Eğitimi_Udemy.png" alt="Udemy Elektrik Proje" loading="lazy">
             </a>
 
           </div>
